...
  static const toutesLesActions = 'Toutes **les actions**';
  static const accederAuSimulateur = 'Accéder au simulateur';
  static const home = 'Accueil';
  static const themeRecommandationsSousTitre = 'Une sélection d’articles et de services, pour vous, selon vos préférences !';
  static const acheterUnVelo = 'Acheter un vélo';
  static const actionRealisee = 'Action réalisée';
  static const adresseEmail = 'Mon adresse email';
  static const adresseEmailHint = 'Format attendu : nom@domaine.fr';
  static const adultes = 'Adulte(s)';
  static const aideVeloAvertissement = 'Veuillez compléter ces informations afin de débuter l’estimation';
  static const ajouterEnFavoris = 'Ajouter en favoris';
  static const allerALAction = 'Aller à l’action';
  static const anneeDeNaissance = 'Année de naissance';
...
  static const bienvenueSur = 'Bienvenue sur J’agis ! Faisons connaissance...';
  static const bienvenueSurDetails = 'Nous avons quelques questions à vous poser pour personnaliser votre expérience !';
  static const bilanEnvironnemental = 'Mon bilan environnemental';
  static const bonjour = 'Bonjour,\n';
  static const bonnesAstucesPourRealiserCetteAction = 'Bonnes astuces pour réaliser cette action';
  static const bravo = 'BRAVO !';
  static const cestParti = 'C’est parti !';
  static const cestPresqueTermine = 'C’est presque terminé !';
  static const cetteActionNeVousConvientPas = 'Cette action ne vous convient pas ?';
  static const cetteActionNeVousConvientPasDetails =
      'On ne vise pas toujours juste ! Dites-nous pourquoi en quelques mots et nous affinerons nos recommandations à l’avenir. (facultatif)';
  static const changerMonMotDePasse = 'Changer mon mot de passe';
  static const changerVotreMotDePasseConfirmation = 'Votre mot de passe a été changé.';
  static const codePostal = 'Code postal';
  static const combienEtesVousDansVotreLogement = 'Combien êtes-vous dans votre logement (vous inclus) ?';
  static const commencer = 'Commencer';
  static const commune = 'Commune';
  static const confirmer = 'Confirmer';
  static const consommationsEnergetiques = 'Consommations énergétiques';
  static const continuer = 'Continuer';
  static const creerMonCompte = 'Créer mon compte';
  static const creerMonCompteApp = 'Créer mon compte J’agis';
  static const declarationAccessibilite = 'Déclaration d’accessibilité';
  static const declarationAccessibiliteSite = 'https://jagis.beta.gouv.fr/accessibilite';
  static const etapes = 'Étapes';
  static const fruits = 'Fruits';
  static const legumes = 'Légumes';
...
  static const enfants = 'Enfant(s) de moins de 18 ans';
  static const enQuelquesMots = 'En quelques mots';
  static const entre100et150m2 = 'Entre 100 et 150 m²';
  static const entre35et70m2 = 'Entre 35 et 70 m²';
  static const entre70et100m2 = 'Entre 70 et 100 m²';
  static const entrezLeCodeRecuParMail = 'Entrez le code reçu par e-mail !';
  static const codeDeVerification = 'Code de vérification';
  static const erreurRoutePageTitre = 'Page non trouvée';
  static const erreurRoutePageDescription = 'La page est introuvable. Excusez-nous pour la gêne occasionnée.';
  static const erreurRoutePageAction = 'Page d’accueil';
  static const erreurInattendue = 'Erreur inattendue';
  static const erreurInattendueContent =
      'Désolé, le service rencontre un problème, nous y travaillons pour le résoudre le plus rapidement possible.';
...
  static const fermer = 'Fermer';
  static const finalementPasPourMoi = 'Finalement, pas pour moi';
  static const firstNameEmpty = 'Le prénom ne peut pas être vide.';
  static const firstNameInvalid = 'Le prénom n’est pas valide.';
  static const homeAssistanceSubTitle = 'Toutes les aides **locales** et **nationales** pour vous aider à passer à l’action';
  static const homeAssistanceTitle = '**Aides financières** et bons plans';
  static const jaccepte = 'J’accepte ';
  static const jaiCompris = 'J’ai compris';
  static const jaiDejaUnCompte = 'J’ai déjà un compte';
  static const jeCreeMonCompte = 'Je crée mon compte';
  static const jeReleveLAction = 'Je relève l’action';
  static const jusqua = 'Jusqu’à ';
  static const leServiveNeCouvrePasEncoreVotreVille = 'Le service ne couvre pas encore votre ville.';
  static const leServiveNeCouvrePasEncoreVotreVilleDescription = 'Nous mettons les informations à jour progressivement.';
  static const lesCategories = 'Les catégories';
  static const lesCgu = 'les conditions générales d’utilisation';
...
  static const lesCguSite = 'https://jagis.beta.gouv.fr/cgu';
  static const maReponse = 'Ma réponse';
  static const maResidencePrincipaleEst = 'Ma résidence principale est ...';
  static const meConnecter = 'Me connecter';
  static const mentionsLegales = 'Mentions légales';
  static const mentionsLegalesSite = 'https://jagis.beta.gouv.fr/mentions-legales';
  static const menu = 'Menu';
  static const mesActions = 'Mes actions';
  static const mesAides = 'Mes aides';
  static const mesAidesDisponibles = 'Mes aides disponibles';
  static const mesAidesLien = 'Voir toutes les aides';
  static const mesFavoris = 'Mes favoris';
  static const mesInformations = 'Mes informations';
...
  static const modifier = 'Modifier';
  static const moinsDe35m2 = 'Moins de 35 m²';
  static const monIdentite = 'Mon identité';
  static const monLogement = 'Mon logement';
  static const monLogementPlusDe15Ans = 'Mon logement a-t-il plus de 15 ans ?';
  static const monMotDePasseDoitContenir = 'Mon mot de passe doit contenir :';
  static const monPrenom = 'Mon prénom';
  static const monProfil = 'Mon profil';
  static const motDePasse = 'Mot de passe';
  static const motDePasse12CaractresMinimum = '12 caractères minimum';
  static const motDePasse1CaractreSpecialMinimum = '1 caractère spécial minimum';
  static const motDePasse1ChiffreMinimum = '1 chiffre minimum';
  static const motDePasse1MajusculeEt1Minuscule = 'Au moins 1 majuscule et 1 minuscule';
  static const motDePasseOublie = 'Mot de passe oublié ?';
...
  static const nom = 'Nom';
  static const nombreDePartsFiscales = 'Nombre de parts fiscales de votre foyer';
  static const nombreDePartsFiscalesDescription = '(Pré-calculé à partir des membres de votre foyer)';
  static const non = 'Non';
  static const nouveau = 'NOUVEAU !';
  static const obligatoire = 'obligatoire';
  static const optionsAvancees = 'Options avancées';
  static const ouHabitezVous = 'Où habitez-vous ?';
  static const ouTrouverCesInformations = 'Où trouver ces informations ?';
  static const ouTrouverCesInformationsReponse = '''
Le revenu fiscal de référence et votre nombre de parts se trouvent sur la 1ère page de votre dernier avis d’impôt.

**Nombre de parts :**
...
  static const revenuQuestion = 'Quelle est votre tranche de revenus ?';
  static const seDeconnecter = 'Se déconnecter';
  static const simulateur = 'Simulateur';
  static const simulerMonAide = 'Simuler mon aide';
  static const statistiques = 'Statistiques';
  static const statistiquesSite = 'https://jagis.beta.gouv.fr/statistiques';
  static const supprimerVotreCompte = 'Supprimer mon compte';
  static const supprimerVotreCompteConfirmation = 'Veuillez confirmer la suppression du compte';
  static const supprimerVotreCompteContenu =
      'Vous pouvez à tout moment choisir de supprimer votre compte ainsi que l’ensemble des données qui y sont associées.';
  static const termine = 'TERMINÉ !';
  static const termine2 = 'Terminé !';
  static const tout = 'Tout';
...
