appId: "fr.gouv.agir.dev2"
---
- launchApp: 
    appId: "fr.gouv.agir.dev2"
    clearState: true
    clearKeychain: true 
- tapOn: "Je crée mon compte"
- tapOn:
    id: Mon adresse email
- inputText: "lucas9@agir.dev"
- tapOn: "Suiv."
- waitForAnimationToEnd:
    timeout: 5000
- inputText: "Azertyuiop1&"
- tapOn: "OK"
- tapOn: "J’accepte " 
- tapOn: "Créer mon compte"
- tapOn: "Code de vérification"
- inputText: "999999"
- tapOn: "Mon prénom"
- inputText: "Lucas"
- tapOn: "OK"
- tapOn: "Code postal"
- inputText: "39100"
- tapOn: "OK"
- tapOn: "Commune"
- tapOn: "DOLE"
- tapOn: "Continuer"
- tapOn: "J’ai compris"
- tapOn: "La cuisine et l’alimentation"
- tapOn: "Continuer"
- tapOn: "C’est parti !"
- tapOn: "Menu"
- tapOn: "Mon profil"
- tapOn: "Options avancées"
- tapOn: "Supprimer mon compte"
- tapOn: "Confirmer"
- assertVisible: "J’ai déjà un compte"
- stopApp: "fr.gouv.agir.dev2"